@@ -63,7 +63,7 @@ $page_title = plugin_hook_function('page_title', draw_navigation_text("title"));
 	<?php
 	if (isset($refresh)) {
 		if (is_array($refresh)) {
-			print "<meta http-equiv=refresh content='" . htmlspecialchars($refresh["seconds"],ENT_QUOTES) . "'; url='" . htmlspecialchars($refresh["page"],ENT_QUOTES) . "'>\r\n";
+			print "<meta http-equiv=refresh content='" . htmlspecialchars($refresh["seconds"],ENT_QUOTES) . "; url=" . htmlspecialchars($refresh["page"],ENT_QUOTES) . "'>\r\n";
 		}else{
 			print "<meta http-equiv=refresh content='" . htmlspecialchars($refresh,ENT_QUOTES) . "'>\r\n";
 		}
